Update to hamcrest 2.2.